# DoodleCopyJump

./: BluePlatform.cpp  BluePlatform.h  CMakeLists.txt  Character.cpp  Character.h  Display.cpp  Display.h  Enemy.cpp  Enemy.h  FileManager.cpp  FileManager.h  Menu.hpp  MenuItem.hpp  Platform.cpp  Platform.h  Playground.cpp  Playground.h  SDL_Fake.cpp  SDL_Fake.h  ScoreLine.cpp  ScoreLine.h  ScoreLine.hpp  Sprite.h  Vector2D.cpp  Vector2D.h  WhitePlatform.cpp  WhitePlatform.h  main.cpp  tests.cpp
assets/: scores.txt
